added module for MySQL 8 servers (requires different driver and dependency)